// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bANFZy CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jKAhip"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hMXKog"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hIPiEv"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
              />
              <span
                class="StyledText-sc-1sadyjn-0 fWxpFz"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 qKBCC"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 hUSFEE"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 hUSFEE Collapsible__AnimatedBox-sc-15kniua-0 kCNXHn"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 czFezB"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bANFZy CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jKAhip"
      >
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hMXKog"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hIPiEv"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
              />
              <span
                class="StyledText-sc-1sadyjn-0 fWxpFz"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 qKBCC"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 hUSFEE"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 hUSFEE Collapsible__AnimatedBox-sc-15kniua-0 dTvbxu"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the children as-is if there is only one 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hUSFEE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bANFZy CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
        role="tablist"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jKAhip"
        >
          <button
            aria-expanded="false"
            aria-selected="false"
            class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
            role="tab"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hMXKog"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hIPiEv"
              >
                <span
                  aria-hidden="true"
                  class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                  role="presentation"
                />
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
                />
                <span
                  class="StyledText-sc-1sadyjn-0 fWxpFz"
                >
                  Get something from somewhere via the Management API
                </span>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 qKBCC"
              >
                <svg
                  aria-label="FormDown"
                  class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m18 9-6 6-6-6"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 hUSFEE"
          >
            <div
              aria-hidden="true"
              class="StyledBox-sc-13pk1d4-0 hUSFEE Collapsible__AnimatedBox-sc-15kniua-0 dTvbxu"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iaNRZt"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jKAhip"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hMXKog"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iwsvlV"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 yzFQy fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
              />
              <span
                class="StyledText-sc-1sadyjn-0 jgpRFU"
              >
                Use the API to …
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 qKBCC"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 hUSFEE"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 hUSFEE Collapsible__AnimatedBox-sc-15kniua-0 kCNXHn"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hhPSRZ"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bANFZy CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
                role="tablist"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 jKAhip"
                >
                  <button
                    aria-expanded="false"
                    aria-selected="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
                    role="tab"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 hMXKog"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 hIPiEv"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 fWxpFz"
                        >
                          Get something from somewhere
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 qKBCC"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 hUSFEE"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 hUSFEE Collapsible__AnimatedBox-sc-15kniua-0 dTvbxu"
                    />
                  </div>
                </div>
              </div>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gwMrom"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 bANFZy CLIGuide__StyledAccordion-sc-1q6mc5x-0 VozNo"
                role="tablist"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 jKAhip"
                >
                  <button
                    aria-expanded="false"
                    aria-selected="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 fCDdYY"
                    role="tab"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 hMXKog"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 hIPiEv"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 iPFcFJ fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dBHSGM"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 fWxpFz"
                        >
                          Get something else from somewhere else
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 qKBCC"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 beBVfJ"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 hUSFEE"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 hUSFEE Collapsible__AnimatedBox-sc-15kniua-0 dTvbxu"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hUSFEE"
    />
  </div>
</div>
`;
